# sd-ocr-translate-backend

./: .config.json  .gitignore  app.py  config.py  llm.py  log.py  ocr.py  pyproject.toml  start_server.sh  translator.py
